Java8 implementation